Change the Database Sequlize intead of the MongoDb
